# openpoketcg-db

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: hard_rebuild.yml  rebuild.yml  update.yml
scraper/: db.py  download.py  parse_pages.py  parse_tables.py  pipeline.py  scrape_html.py  storage.py
scripts/: hard_rebuild_db.py  rebuild_db.py  update_db.py
