[project]
name = "openpoketcg-db"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.3",
    "supabase>=2.15.2",
]

[dependency-groups]
dev = [
    "ruff>=0.11.12",
    "pre-commit>=4.2.0",
    "ty>=0.0.1a16",
]
